Added notification page and route
